Update Material theme secondary color value to meet WCAG AA contrast ratio criteria. Resolves #1923

--- a/Radzen.Blazor/themes/material.scss
+++ b/Radzen.Blazor/themes/material.scss
@@ -10,7 +10,7 @@ $rz-black: #000000 !default;
 
 $rz-base: #eeeeee !default;
 $rz-primary: #4340D2 !default;
-$rz-secondary: #e91e63 !default;
+$rz-secondary: #e31c65 !default;
 $rz-info: #2196f3 !default;
 $rz-success: #4caf50 !default;
 $rz-warning: #ff9800 !default;
